AsciiDoc ChangeLog
==================

:replacements.\bweb:: http://www.methods.co.nz/asciidoc/

Version 8.5.4 (2010-08-15)
--------------------------
.Additions and changes
- CSS 'quirks' mode is no longer the default 'xhtml11' output
  (http://groups.google.com/group/asciidoc/browse_thread/thread/1c02d27d49221aa2).
- Relaxed anchor ID name syntax
  (http://groups.google.com/group/asciidoc/browse_thread/thread/5f3e825c74ed30c).
- Added document files: `doc/epub-notes.txt`,
  `doc/publishing-ebooks-with-asciidoc.txt`.
- 'a2x': If all other resource locations are exhausted then recursively
  search directories named 'images' and 'stylesheets' in the
  'asciidoc' configuration files directory.
- 'a2x': options can also be set in the AsciiDoc source file. If the
  source file contains a line beginning with '// a2x:' then the
  remainder of the line will be treated as a2x command-line options.
- Added dblatex table-width processing instruction -- tables generated
  by dblatex now observe the AsciiDoc table width as a percentage
  (thanks to Gustav Broberg for suggesting this enhancement).
- 'a2x': Don't exit if the `--epubcheck` option is set and 'epubcheck'
  is missing, issue warning and continue.
- Added a global 'plaintext' attribute for dealing with large amounts
  of imported text.
- The author name format has been relaxed, if the the author does not
  match the formal specification then it is assigned to the
  'firstname' attribute (previously asciidoc exited with an error
  message).
- FAQ and documentation updates.
- Refactored chunked.xsl and epub.xsl files.
- Exchanged article.epub for more relevant book.epub on website.
- Put asciidoc.epub User Guide on website.
- 'a2x': Chunking EPUB and HTML outputs set to a per chapter basis and
  the first chapter is separate from preceding contents.
- Changed dates format in example article and books to suppress EPUB
  validation error.
- Added 'style' and 'role' CSS classes to xhtml11 section templates.