@@ -217,7 +217,8 @@ clean:
 
 spell: $INFILES ../CHANGELOG.txt ../README.txt ../BUGS.txt ../INSTALL.txt \
         a2x.1.txt faq.txt asciidocapi.txt testasciidoc.txt \
-        epub-notes.txt publishing-ebooks-with-asciidoc.txt
+        epub-notes.txt publishing-ebooks-with-asciidoc.txt \
+        source-highlight-filter.txt
     # Interactively spell check all files.
     @for s in source_list:
         :sys {i} $ASPELL check -p ./asciidoc.dict $s
