@@ -5,7 +5,7 @@ The AsciiDoc distribution includes a source code syntax highlight
 filter (`source-highlight-filter.conf`). It uses
 http://www.gnu.org/software/src-highlite/[GNU source-highlight] to
 highlight HTML outputs. You also have the option of using the
-http://pygments.org/[Pygments] syntax highlighter for 'xhtm11'
+http://pygments.org/[Pygments] syntax highlighter for 'xhtml11'
 outputs.
 
 To use Pygments you need to define an AsciiDoc attribute named
@@ -25,7 +25,7 @@ DocBook outputs are highlighted by toolchains that have
   'AttributeEntry' or from the command-line) you don't have to specify
   it in each source code block.
 - You may need to place callout markers inside source code comments to
-  ensure they are not misinterpereted and mangled by the hightlighter.
+  ensure they are not misinterpreted and mangled by the highlighter.
 =====
 
 Examples
